_sass/_reset.scss
@import "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap";

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

:root {
	color-scheme: dark;
}

body {
	height: 100vh;
	width: 100vw;

	font: 1em/1.5 "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;

	// padding: 0 1em;
	// min-width: rem(280px);
	// min-height: 100vh;
	// font: 1em/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
	color: #b1b1b3;
	background: $color-background;
	scroll-behavior: smooth;
}

a:active,
a:focus {
	outline: 1px dotted rgba(255, 255, 255, 0.5);
	outline-offset: rem(4px);
}

a:focus:not(:active) {
	outline: rem(3px) solid #fff;
	-moz-outline-radius: rem(4px);
	outline-offset: rem(4px);
}

code {
	line-height: 1;
	font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
}

p code {
	font-size: 85%;
	padding: 0.2em 0.4em;
	border-radius: rem(3px);
	background-color: rgba(255, 255, 255, 0.125);
}

